--- a/gb/23/2/8/n13925272.md
+++ b/gb/23/2/8/n13925272.md
@@ -25,44 +25,45 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924471.md#1">北温免预约看诊等待时间居全国之首</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924456.md#1">加拿大100家最浪漫餐厅 卑诗省20家餐厅入选</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924446.md#1">省府发布施政报告 反对党：未看到具体目标</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923638.md#1">毛绒土拨鼠预测：卑诗省将迎来早春</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923632.md#1">大温地区2022年市选募款与花费一览</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923624.md#1">Airbnb房客被驱逐 入禀法院求偿败诉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923485.md#1">博励治呼吁卑诗省?改变毒品非刑事化政策</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922026.md#1">专访赵锦荣： 用爱心助乌克兰难民渡过难关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921606.md#1">鸿兔大展 台师大校友会举办春茗餐叙</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065118.md#1">卑诗省2022/23财年盈余7.04亿元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065113.md#1">专家预测卑诗房市明年重返升势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065112.md#1">温哥华PNE露天剧场将被拆除</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064915.md#1">卑诗省仍有420多处野火 紧急状态延长两周</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064899.md#1">原住民关闭乔弗尔湖省立公园</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064879.md#1">涉780万元地产庞氏骗局  2名基洛纳居民被控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064260.md#1">卑诗省将拨款兴建3500 套经济适用房</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064255.md#1">加拿大首例：卑诗发现COVID-19变异株BA.2.86</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064252.md#1">温哥华机场启动新程序助旅客赶上航班</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064250.md#1">卑诗内陆受热浪袭击   396 处野火正在蔓延</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/15/n10145540.md#1" target="_blank">关敏：不许鼓吹“蒋经国时代”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/17/n10063990.md#1" target="_blank">苏智敏：血腥计生悲歌——帮凶  弃卒  泪水</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920654.md#1">音乐才子曾患白肺命危 默念九个字起死回生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922806.md#1">美国牧师濒死见地狱惨状 耶稣交代他一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917512.md#1">生命元神不灭 勿生生沉沦苦海里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917669.md#1">正月冬雷异象 多方示警亡政之兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922072.md#1">【未解之谜】新旧交替 地球面临大更新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924672.md#1">【十字路口】间谍气球让习近平陷困局</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924560.md#1">【马克时空】美军F-22击落间谍气球 中共扬言报复</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924748.md#1">【军事热点】间谍气球余波未平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923437.md#1">中共为间谍气球狡辩 余茂春：谎话无法圆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923557.md#1">沈舟：F-22击落中共气球 凸显中美军力差距</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923831.md#1">社区食堂也要烂尾？中共官媒称运营有困扰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924175.md#1">惊传与杨颖复合 黄晓明过年无名指戴钻戒引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922703.md#1">胡歌宣布当爸后首现身 被翻曾预告过年送惊喜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922969.md#1">李安不以高帧率拍《李小龙》首认新片用不到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922614.md#1">《毒舌大状》影评：天有眼 公道自在人心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924145.md#1">家乡土耳其发生强震 吴凤贴影片惊呼世界末日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922993.md#1">英男用这招订航班商务舱机位 比经济舱便宜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919486.md#1">炎症生百病 5种天然消炎药帮你抗炎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922810.md#1">持续慢性胸痛？根源可能不是因为心脏问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898617.md#1">被称为“大药箱” 这一植物抗流感功效强大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922858.md#1">为什么不能仅靠吃蔬菜水果抗癌？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065489.md#1">【新闻看点】习近平真怒了？拜登这锤太重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065399.md#1">【未解之谜】命中注定爱上你？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065492.md#1">【新闻大破解】英力挺台湾 六国军舰将穿台海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064875.md#1">【菁英论坛】习防暗杀人心惶惶 传李强想辞职</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064774.md#1">中共国防部回应魏凤和等下落 官网删相关内容</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064502.md#1">消息：习近平可能不会出席G20峰会</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064267.md#1">因嫖娼遭封杀 李云迪首现身国外街头喝咖啡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063538.md#1">中风12年半身不遂 武打明星刘家辉近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064222.md#1">曝《好声音》2学员挺李玟后消失 甄妮表担忧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064302.md#1">遭《好声音》黑料波及 那英澳门演唱会延期</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064909.md#1">大马监制李建兴证实《好声音》导师转身价码</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060476.md#1">断食可损伤刺突蛋白 对抗阿尔茨海默病和癌症</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056483.md#1">好做好吃 6款药膳帮你护肝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063925.md#1">飞行员告诫飞机乘客守规矩 这么做恐遭禁飞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063138.md#1">【美食天堂】油条家庭做法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064562.md#1">花椰菜上有黑色斑点 吃起来安全吗？</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/8/n13925272.htm">租客违规分租经营Airbnb  列治文业主糟心</a></p><hr>
